--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "equipo-website",
+  "name": "equipe-website",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,7 +11,12 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.1"
+    "next": "15.3.1",
+    "firebase": "^10.9.0",
+    "framer-motion": "^11.1.0",
+    "react-intersection-observer": "^9.8.0",
+    "sharp": "^0.34.1",
+    "clsx": "^2.1.0"
   },
   "devDependencies": {
     "typescript": "^5",
